--- a/index.html
+++ b/index.html
@@ -1,101 +1,125 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA Compatible" content="If-edge">
-        <meta name="viewport" content="width-device-width, initial-scale-1.0">
-        <title>Personal Portifolio Website</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div id="header">
-            <div class="container">
-                <nav>
-                <img src="logo_trial.png" class="logo">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Portfolio Website</title>
+    <link rel="stylesheet" href="correct.css">
+</head>
+<body>
+    <div id="header">
+        <div class="container">
+            <nav>
+                <img src="logo_trial.png" class="logo" alt="Logo">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portifolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://github.com/ddddaaaavvvviiiiddddnnnn" target="_blank">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/feed/" target="_blank">LinkedIn</a></li>
                 </ul>
             </nav>
             <div class="header-text">
                 <p>Full-stack Developer</p>
-                <h1>Hi,I'm <span>David </span><br>Njoroge from Kenya</h1>
-            </div>
+                <h1>Hi, I'm <span>David Njoroge</span><br>from Kenya</h1>
+                <button class="btn" onclick="window.open('./project/cv.docx', '_blank')">Download CV</button>
             </div>
         </div>
-<!--------about-------->
-        <div id="about">
-            <div class="container">
-                <div class="row">
-                    <div class="about-col-1">
-                        <img src="a.jpg" alt="">
+    </div>
+
+    <!-- About Section -->
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="pic.jpg" alt="About Me">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="subtitle">About Me</h1>
+                    <p>A talented, motivated, disciplined & self-driven person with qualities in computer programming, excellent communication skills. A professional with work ethics that enables to work in group setting & or individually. I possess a diverse skill set in programming languages such as HTML, Java, PHP, JavaScript, Python, and MySQL, enabling me to develop web-based applications effectively. Beyond my academic pursuits, I excel in interpersonal communication, fostering strong customer relations. Proficient in technology integration, I enhance work efficiency through adept use of Microsoft Word, Excel, PowerPoint, and other tools.</p>
+                    <div class="tab-title">
+                        <p class="tab-links active-link" onclick="openTab('skills')">Skills</p>
+                        <p class="tab-links" onclick="openTab('experience')">Experience</p>
+                        <p class="tab-links" onclick="openTab('education')">Education</p>
                     </div>
-                    <div class="about-col-2">
-                        <h1 class="subtitle">About Me</h1>
-                        <p>A talented, motivated, disciplined & self-driven person with qualities in computer programming, facit communication skills. A professional with work ethics that enables to work in group setting & or individually.I possess a diverse skill set in programming languages such as HTML, Java, PHP, JavaScript, Python, and MySQL, enabling me to develop web-based applications effectively. Beyond my academic pursuits, I excel in interpersonal communication, fostering strong customer relations. Proficient in technology integration, I enhance work efficiency through adept use of Microsoft Word, Excel, PowerPoint, and other tools.</p>
-                        <div class="tab-title">
-                            <p class="tab-links active-links" onclick="opentab('skills')">Skills<p
-                            class="tab-links"  onclick="opentab('experience')">Experience<p
-                            class="tab-links"  onclick="opentab('education')">Education</p>
-                        </div>
-                        <div class="tab-contents active-tab" id="skills">
-                            <ul type="disc">
-                                <li><span>Full-stack developer</span>
-                                <li>front-end developer</li>
-                                <li>Back-end developer</li>
-                                <li>Design</li>
-                                <li>Problem solving</li>
-                                <li>Web architecture</li>
-                                <li>Frontend frameworks</li>
-                                <li>Git</li>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="tab-contents" id="experience">
-                            <ul type="circle">
-                                <li style="color: aqua;"><span>Full-stack developer</span>
-                                    <li> Programming scalable and clean code.</li>
-                                    <li> Market analysis.</li>
-                                    <li> Full-cycle application development.</li>
-                                    <li> Designing product development strategies.</li>
-                                    <li> Selection of the most suitable technologies.</li>
-                                    <li> Development of databases.</li>
-                                    <li> Product optimization.</li>
-                                    <li> Product demonstration.</li>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="tab-contents" id="education">
-                            <ul type="square">
-                                <li><span>2024-2025:("Computer Programming") at Kenswed Technical & Vocational Training Collage</span>
-                                    <li>HTML</li>
-                                    <li>PHP</li>
-                                    <li>Java</li>
-                                    <li>JavaScript</li>
-                                    <li>Python</li>
-                                </li>
-                            </ul>
-                        </div>
+                    <div class="tab-contents active-tab" id="skills">
+                        <ul>
+                            <li><span>Full-stack developer</span></li>
+                            <li>Front-end developer</li>
+                            <li>Back-end developer</li>
+                            <li>Design</li>
+                            <li>Problem solving</li>
+                            <li>Web architecture</li>
+                            <li>Frontend frameworks</li>
+                            <li>Git</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="experience">
+                        <ul>
+                            <li><span>Full-stack developer</span></li>
+                            <li>Programming scalable and clean code.</li>
+                            <li>Market analysis.</li>
+                            <li>Full-cycle application development.</li>
+                            <li>Designing product development strategies.</li>
+                            <li>Selection of the most suitable technologies.</li>
+                            <li>Development of databases.</li>
+                            <li>Product optimization.</li>
+                            <li>Product demonstration.</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="education">
+                        <ul>
+                            <li><span>2024-2025: ("Computer Programming") at Kenswed Technical & Vocational Training College</span></li>
+                            <li>HTML</li>
+                            <li>PHP</li>
+                            <li>Java</li>
+                            <li>JavaScript</li>
+                            <li>Python</li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <script>
-            var tablinks=document.getElementsByClassName("tab-links");
-            var tabcontents=document.getElementsByClassName("tab-contents")
-            function onclick(tabname) {
-                for(tablink of tablinks){
-                    tablink.classlist.remove("active-link");
-                }
-                for(tabcontent of tabcontents){
-                    tabcontent.classlist.remove("active-tab");
-                }
-                event.currentTarget.classlist.add("active-link");
-                document.getElementById(tabname).classList.add("active-tab");
+    </div>
+    <section id="projects">
+        <h1>Projects</h1>
+        <div class="project">
+            <h2>Front-end</h2>
+            <p>Description of project 1.</p>
+        </div>
+        <div class="project">
+            <h2>Back-end</h2>
+            <p>Description of project 2.</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h1>Contact</h1>
+        <form id="contact-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea>
+            <button type="submit">Send</button>
+        </form>
+    </section>
+    <script>
+        function openTab(tabName) {
+            var tabLinks = document.getElementsByClassName("tab-links");
+            var tabContents = document.getElementsByClassName("tab-contents");
+            for (var tabLink of tabLinks) {
+                tabLink.classList.remove("active-link");
             }
-        </script>
-    </body>
+            for (var tabContent of tabContents) {
+                tabContent.classList.remove("active-tab");
+            }
+            event.currentTarget.classList.add("active-link");
+            document.getElementById(tabName).classList.add("active-tab");
+        }
+    </script>
+</body>
 </html>
