--- a/correction.html
+++ b/correction.html
@@ -24,7 +24,7 @@
             <div class="header-text">
                 <p>Full-stack Developer</p>
                 <h1>Hi, I'm <span>David Njoroge</span><br>from Kenya</h1>
-                <button class="btn" onclick="window.open('./project/cv.docx', '_blank')">Download CV</button>
+                <button class="btn" onclick="window.open('.cv.docx', '_blank')">Download CV</button>
             </div>
         </div>
     </div>
@@ -87,14 +87,17 @@
         <h1>Projects</h1>
         <div class="project">
             <h2>Front-end</h2>
-            <p>Description of project 1.</p>
+            <img src="download.jpeg" alt="Screenshot of Front-end project">
+            <p>
+                A front-end developer is a web development professional who focuses on creating the parts of a website or web application that users interact with directly. They use languages like HTML, CSS, and JavaScript to build and style web pages, ensuring they look good and work well on all devices. Front-end developers work closely with designers and back-end developers to turn design mockups into functional, user-friendly websites. Their main responsibilities include writing clean code, making sure websites are responsive and accessible, and troubleshooting any issues that arise.</p>
         </div>
         <div class="project">
             <h2>Back-end</h2>
-            <p>Description of project 2.</p>
+            <img src="download (1).jpeg" alt="Screenshot of Back-end project">
+            <p>A back end developer is a type of software developer who focuses on building and maintaining the server-side logic, databases, and application programming interfaces (APIs) that power the functionality of websites and applications. Their work involves ensuring that the server, application, and database communicate properly, managing the architecture of the application, and handling data storage and retrieval. They often work with languages and technologies like Python, Java, Ruby, SQL, and Node.js. Back end developers ensure that the data and services requested by the front end system or software are delivered effectively and securely.</p>
         </div>
     </section>
-
+    
     <section id="contact">
         <h1>Contact</h1>
         <form id="contact-form">
