--- a/index.html
+++ b/index.html
@@ -87,13 +87,16 @@
         <h1>Projects</h1>
         <div class="project">
             <h2>Front-end</h2>
+            <img src="download (1).jpeg" alt="Screenshot of Front-end project">
             <p>Description of project 1.</p>
         </div>
         <div class="project">
             <h2>Back-end</h2>
+            <img src="download.jpeg" alt="Screenshot of Back-end project">
             <p>Description of project 2.</p>
         </div>
     </section>
+    
 
     <section id="contact">
         <h1>Contact</h1>
